build: update to utilise ms-common and ms-gradle-baseline
This commit updates the service to utilise the common platform for
dependencies and the gradle baseline plugin for applying common code
quality standards.